--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ BODY{font-family: 'Poppins', sans-serif;margin-left:0px;margin-right: 0px;}
 
 /* --------header------- */
 
+/* --------header------- */
+
 nav{display: flex;justify-content:space-between;align-items: center;height: 100px;}
 .navigation{display:flex;}
 .menu{margin: 0 auto;
@@ -38,7 +40,8 @@ nav li a{text-decoration: none;
   margin-top: 16px;top: 0;
   position:;box-shadow:0 3px 0  #20030e;
   ;}
-.photo{margin-left: 70px;}
+.photo{margin-left: 70px;transition:transform 2s ease-in-out;}
+.photo:hover{transform:scale(1.3);}
 .anchor:active{top: 4px;cursor: pointer;}
 
 /* -------------------------------------------
@@ -107,16 +110,3 @@ align-items: center;background-color: black;color: white;height:180px ;}
 .notice{margin-left:100px;}
 h3{font-size: 25px;margin-bottom: 0px;margin-top: 5px;}
 .join{font-size: 30px;margin-right:5px;margin-top: 5px;}
-
-/* ------------------------------------------------------------
-------------------responsiv-css--------------------------------
----------------------------------------------------------- */
-@media (max-width:950px){
-.section-1{
-  grid-template-columns: repeat(1,1fr);
-  height: fit-content;
-}
-.product-list{height: fit-content;}
-.section-2{grid-template-columns: repeat(1,1fr);}
-h1,h2{font-size: 20px;}
-}
