--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-BODY{font-family: 'Poppins', sans-serif;margin-left:0px;margin-right: 0px;}
+BODY{font-family: 'Poppins', sans-serif;margin-left:0px;margin-right: 0px;overflow-x:hidden;}
 
 /* --------header------- */
 
@@ -14,12 +14,14 @@ h2{font-size: 24px;left: 9px;;
 nav li{list-style: none;margin-right: 15px;}
 nav li a{text-decoration: none;
   font-size:20px;color:background: #3A3A3A;
-  ;padding: 0 10px;}
+  ;padding: 0px 10px;}
 
 
 /* ---------main---section------------- */
 .container{width: 80%;}
-.section-1{display: flex;margin-bottom: 50px;margin-left: 130px;}
+.section-1{display: flex;
+  margin-bottom: 50px;
+  margin-left: 130px;}
 .section-1 img{
   width: 440px;
   height: 414px;
@@ -48,28 +50,30 @@ nav li a{text-decoration: none;
 -------------svg--logos-------------------
 --------------------------------------------- */
 
-hr{border: 1px solid rgb(238, 231, 231) ;margin-left: 550px;margin-right: 550px;}
+hr{border:1px solid rgb(238, 231, 231) ;margin-left: 550px;margin-right: 550px;}
 .svg{margin-left: 530px;}
 .logos{margin-right: 25px;}
 .row{margin-bottom: 60px;margin-right: 550px;}
   /* ---------------------------------- */
   /* -----section-2-------- */
   /* --------------------------- */
-  .container-2{width: 1047px;
-    height: 1750px;
-    left: 196px;
-    top: 935px;justify-content: center;
-    margin-left: 390px;margin-bottom: 80px;margin-bottom: 20px;}
+  .container-2{width:60%;
+    /* height: 1750px; */
+  margin-bottom: 20px;
+margin: auto;
+}
 
-  .caption{font-size: 28px;height: 70px;
-    width: 262px;
-    margin-left: 400px;
+  .caption{font-size: 28px;
+    /* margin:auto; */
+    text-align: center;
+    margin-bottom: 30px;
     }
   .section-2{
   display:grid;
 grid-template-columns: repeat(3,1fr);
 justify-content: center;
-grid-gap-row:10px;
+
+/* grid-gap-row:10px; */
 margin-bottom:20px;margin-left:45px;}
 
 .product-list{margin-left:10px;padding:20px;margin:10px ;width: 329px;
@@ -98,18 +102,25 @@ margin-bottom:20px;margin-left:45px;}
   margin-top: 16px;top: 0;
   position: relative;box-shadow:0 3px 0  #20030e;
   ;}
-.anchor:active{top: 4px;cursor: pointer;}
+.anchor-2:active{top: 4px;cursor: pointer;}
 
 
   /* ------------------------------------------ */
   /* -----------footer----------------- */
   /* ------------------------------------- */
-  .social-media{display:flex;
-  flex-direction: column;
-align-items: center;background-color: black;color: white;height:180px ;}
-.notice{margin-left:100px;}
-h3{font-size: 25px;margin-bottom: 0px;margin-top: 5px;}
-.join{font-size: 30px;margin-right:5px;margin-top: 5px;}
+  .social-media{
+background-color: black;
+color: white;
+height:250px ;}
+.notice{text-align: center;padding-top: 5px;
+ }
+ 
+
+.join{font-size:30px; margin-bottom:5px;
+text-align: center; }
+.join i {
+  margin-right:10px;
+}
 
 /* -----------------------------------------------------
 ---------------------media queary for phone---------------------
@@ -118,17 +129,100 @@ h3{font-size: 25px;margin-bottom: 0px;margin-top: 5px;}
 
 
 
-@media only screen and(max-width:667px) {
-  .section-1,container-3{flex-direction: column;}
-  .section-2{grid-template-columns: repeat(1,1fr);}
+ @media (max-width:667px) { 
+   .menu{
+     margin-left: 80px;
+   }
+.section-1{
+  display: flex;
+ flex-direction: column;
 }
+.information{
+  width: 90vh;
+  font-size: 30px;
+}
+.photo{
+  margin-top: 100px;
+}
+.svg{
+  display: flex;
+  margin-left: 90px;
+}
+
+.container-2{
+  margin-left: 220px;
+}
+.section-2{
+  display: flex;
+ flex-direction: column;
+ 
+}
+.container-3{
+  display: flex;
+  flex-direction: column;
+  margin-left: 260px;
+}
+.product-info{
+  width: 60%;
+  font-size: 20px;
+}
+.social-media{
+  width: 150%;
+}
+  
+} 
 
 
 /* -------------------------------------------------
 ---------------for tablet ---------------------------
 ----------------------------------------------- */
 
-@media only screen and(min-width:668px) and(max-width:950px) {
-.section-1{grid-template-columns: repeat(2,1fr);}
-
+@media (min-width:668px) and (max-width:950px) {
+  .menu{
+    width: 80%;
+    margin-left: 80px;
+  }
+/* .section-1{
+ display: flex;
+flex-direction: column;
+} */
+.information{
+ width: 90vh;
+ font-size: 15px;
 }
+.photo{
+ margin-top: 80px;
+ margin-right: 20px;
+}
+.svg{
+ display: flex;
+ margin-left: 40px;
+}
+
+.container-2{
+ margin-left: 170px;
+}
+.section-2{
+  grid-template-columns: repeat(2,1fr)
+}
+
+.container-3{
+ margin-left: 55px;
+ width: 60%;
+}
+.product-info{
+ width: 60%;
+ font-size: 20px;
+}
+.product-info p{
+  font-size: 15px;
+}
+.anchor-2{
+  /* margin-top: 0px; */
+  font-size: 10px;
+}
+.social-media{
+ width: 100%;
+}
+
+} 
